--- a/FlightAdministrator/force-app/main/default/layouts/Airport__c-Airport Layout.layout-meta.xml
+++ b/FlightAdministrator/force-app/main/default/layouts/Airport__c-Airport Layout.layout-meta.xml
@@ -26,11 +26,11 @@
                 <field>City__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>IataCode__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Geolocation__c</field>
             </layoutItems>
         </layoutColumns>
