--- a/FlightAdministrator/force-app/main/default/layouts/Flight__c-Flight Layout.layout-meta.xml
+++ b/FlightAdministrator/force-app/main/default/layouts/Flight__c-Flight Layout.layout-meta.xml
@@ -18,17 +18,17 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>FlightDistance__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>DepartureAirport__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>ArrivalAirport__c</field>
             </layoutItems>
         </layoutColumns>
